# ghostpost

./: db.sqlite3  manage.py  pyproject.toml  rubric.txt
GhostPostApp/: admin.py  apps.py  forms.py  models.py  views.py
GhostPostApp/migrations/: 0001_initial.py  0002_auto_20200821_0258.py  0003_auto_20200821_0318.py  0004_posts_secret.py
GhostPostApp/static/css/: GhostPostApp.css
GhostPostProject/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html  navbar.html  post.html
