[tool.poetry]
name = "Kenzie-Ghost-Post"
version = "1"
description = ""
authors = ["John Wilkinson <johnpwilkinson@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
